--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ nav{
 }
 nav a{
     text-decoration: none;
-    color: rgb(0, 0,0.78);
+    color: #5F6368
 }
 
 nav a:hover{
@@ -45,3 +45,23 @@ nav a:hover{
     border-radius: 50%;
 }
 
+.logo{
+    display: flex;
+    justify-content: center;
+    padding: 9.5em 0 0 0 ;
+}
+.input{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    padding-top: 2em;
+    
+}
+
+input{
+    padding: 1em 15em;
+    border-radius: 20px;
+    border-style: solid;
+    border-color: rgba(0, 0, 1, 0.199);
+    box-shadow: 1px 1px 2px 2px hsla(0, 1%, 48%, 0.11);
+}
