Added images to search bar and search buttons.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,15 +53,46 @@ nav a:hover{
 .input{
     display: flex;
     flex: 1;
-    justify-content: center;
-    padding-top: 2em;
-    
+    padding-top: 1.5em;
+
 }
 
 input{
-    padding: 1em 15em;
-    border-radius: 20px;
+    padding: 1.25em 15.5em;
+    border-radius: 25px;
     border-style: solid;
-    border-color: rgba(0, 0, 1, 0.199);
-    box-shadow: 1px 1px 2px 2px hsla(0, 1%, 48%, 0.11);
+    border-color: #dfe1e5;
+}
+
+.search-wrapper{
+    position: relative;
+    margin-left: 42em;
+    margin-top: 1.5em;
+}
+
+.search-img {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+}
+
+.search-voice{
+    position: absolute;
+    top:9px;
+    left: 550px;
+}
+
+.buttons{
+   text-align: center; 
+   margin-top: 1.5em;
+}
+
+div button{
+    display: inline-block;
+    padding: 10px 16px;
+    background-color: #f2f2f2;
+    border-style: none;
+}
+.gsearch{
+   padding-right: 40px;
 }
